[package]
name = "cli"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presenter = {path = "../presenter"}
infra = {path = "../infra"}
module = {path = "../module"}
structopt = "0.3.14"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.31"
