[package]
name = "infra"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presenter = {path = "../presenter"}
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_ce = "0.43.0"
futures = "0.3.5"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1.31"
serde = "1.0.110"
serde_json = "1.0.53"